<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363131"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="374dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/logo" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/calculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/localizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacao" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/navegador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navegador" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agenda" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:text="@string/about" />
    </TableRow>

</TableLayout>